<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>ac-dist</artifactId>
	<packaging>pom</packaging>
	<name>总账构建</name>
    
	<parent>
		<groupId>cn.sunline.ltts.business</groupId>
		<artifactId>ltts-parent</artifactId>
		<version>3.0.0-SNAPSHOT</version>
	</parent>
	
		
	 <properties>
		<edsp-module>true</edsp-module>
		<dist.version>3.0.0-SNAPSHOT</dist.version>
		<dist.skip>false</dist.skip>
		<dist.mainCmd>adp</dist.mainCmd>
		<assembly.file>${basedir}/src/assembly/assembly.xml</assembly.file> 
		<assembly.appendId>false</assembly.appendId>
		<edsp-maven-genshell-version>2.0.1-RELEASE</edsp-maven-genshell-version>
	</properties>

	<modules>
		<module>fa</module>
		<module>gl</module>
		<module>fatran</module>
		<module>gltran</module>
	</modules>
	
	<dependencies>
		<dependency>
			<groupId>cn.sunline.ltts.business</groupId>
			<artifactId>pb</artifactId>
			<version>${dist.version}</version>
		</dependency>		
		<dependency>
			<groupId>cn.sunline.ltts.business</groupId>
			<artifactId>gl-fa</artifactId>
			<version>${dist.version}</version>
		</dependency>
		<dependency>
			<groupId>cn.sunline.ltts.business</groupId>
			<artifactId>gl-fatran</artifactId>
			<version>${dist.version}</version>
		</dependency>
		<dependency>
			<groupId>cn.sunline.ltts.business</groupId>
			<artifactId>gl-gl</artifactId>
			<version>${dist.version}</version>
		</dependency>
		<dependency>
			<groupId>cn.sunline.ltts.business</groupId>
			<artifactId>gl-gltran</artifactId>
			<version>${dist.version}</version>
		</dependency>
	</dependencies>
			<build>
			 <finalName>${project.artifactId}</finalName>
			<plugins>				
			   <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!--   要将源码放上去，需要加入这个插件    -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
            </plugin>
				
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.1.2</version>
						<configuration>
							<skip>${dist.skip}</skip>
						</configuration>
						<executions>
							<execution>
								<id>copy-dependencies</id>
								<phase>package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>${basedir}/target/dist/lib</outputDirectory>
									<overWriteReleases>true</overWriteReleases>
									<overWriteSnapshots>true</overWriteSnapshots>
									<overWriteIfNewer>true</overWriteIfNewer>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>cn.sunline.edsp.maven</groupId>
						<artifactId>edsp-maven-shell-plugin</artifactId>
						<version>${edsp-maven-genshell-version}</version>
						
						<configuration>
							<mainCmd>${dist.mainCmd}</mainCmd>
							<jvmArgs>
								<jvmArg>-server</jvmArg>
								<jvmArg>-Xms2048m</jvmArg>
								<jvmArg>-Xmx2048m</jvmArg>
								<jvmArg>-XX:PermSize=512m</jvmArg>
								<jvmArg>-XX:MaxPermSize=512m</jvmArg>
								<jvmArg>-XX:+UseFastAccessorMethods</jvmArg>
								<jvmArg>-XX:+UseCompressedOops</jvmArg>
								<jvmArg>-XX:+DisableExplicitGC</jvmArg>
								<jvmArg>-XX:+ExplicitGCInvokesConcurrent</jvmArg>
								<jvmArg>-XX:ParallelGCThreads=10</jvmArg>
								<jvmArg>-XX:-UseAdaptiveSizePolicy</jvmArg>
								<jvmArg>-Xmn768m</jvmArg>
								<jvmArg>-XX:SurvivorRatio=6</jvmArg>
								<jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
								<jvmArg>-XX:+CMSParallelRemarkEnabled</jvmArg>
								<jvmArg>-XX:+UseCMSCompactAtFullCollection</jvmArg>
								<jvmArg>-XX:+UseCMSInitiatingOccupancyOnly</jvmArg>
								<jvmArg>-XX:CMSInitiatingOccupancyFraction=70</jvmArg>
								<jvmArg>-XX:+PrintGCApplicationStoppedTime</jvmArg>
								<jvmArg>-XX:+PrintGCApplicationConcurrentTime</jvmArg>
								<jvmArg>-verbose:gc-XX:+PrintGCTimeStamps</jvmArg>
								<jvmArg>-XX:+PrintGCDateStamps</jvmArg>
								<jvmArg>-Xloggc:/export/log/${VMID}/ltts_gc.log</jvmArg>
								<jvmArg>-XX:-TraceClassUnloading</jvmArg>
								<jvmArg>-XX:+PrintGCDetails</jvmArg>
								<jvmArg>-Dlanguage.conf=cn</jvmArg>
								<jvmArg>-Dlog4j.configurationFile=log4j2.xml</jvmArg>
								<jvmArg>-Dltts.log.home=/export/log</jvmArg>
								<jvmArg>-Dltts.vmid=${VMID}</jvmArg>
								<!-- <jvmArg>-javaagent:/export/package/sgm-probe-5.2.4-ex/sgm-agent-5.2.4.jar </jvmArg>
								<jvmArg>-Xbootclasspath/a:/export/package/sgm-probe-5.2.4-ex/sgm-agent-5.2.4.jar</jvmArg>
								<jvmArg>-Dsgm.app.name=icore_gl</jvmArg> -->
							</jvmArgs>
							<logdir>/export/log/${VMID}</logdir>
							<starter>cn.sunline.adp.boot.cedar.CedarMain</starter>
							<stopTimeout>30</stopTimeout>
							<startOkFlag>SystemStatus:Started</startOkFlag>
							<startErrFlag>SystemStatus:Error</startErrFlag>
							<skip>${dist.skip}</skip>
						</configuration>
						<executions>
							<execution>
								<id>gen-shell-tpl</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>gen-shell</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.1.0</version>
						<configuration>
							<skipAssembly>${dist.skip}</skipAssembly>
							<appendAssemblyId>${assembly.appendId}</appendAssemblyId>
							<descriptors>
								<descriptor>${assembly.file}</descriptor>
							</descriptors>
						</configuration>
						<executions>
							<execution>
								<id>make-assembly</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			
    <profiles>
		<profile>
			<!-- 本地开发环境 -->
			<id>dev</id>
			<properties>
				<profiles.active>dev</profiles.active>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<!-- 测试环境 -->
			<id>sit</id>
			<properties>
				<profiles.active>sit</profiles.active>
			</properties>
		</profile>
		<profile>
			<!-- 生产环境 -->
			<id>prod</id>
			<properties>
				<profiles.active>prod</profiles.active>
			</properties>
		</profile>
	</profiles>
</project>